[gd_scene load_steps=2 format=3 uid="uid://cnav6fk1vrvps"]

[ext_resource type="Script" path="res://scripts/ui/DialogueUI.gd" id="1_2xb5h"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2xb5h")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Speaker Name"
horizontal_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "This is the dialogue text that will be displayed to the player."
fit_content = true

[node name="ContinueHint" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Press E or Space to continue..."
horizontal_alignment = 2 